feat: Phase 2 RBAC — JWT 角色控制 + SecurityConfig 权限路由
- UserEntity: 新建 users 表实体（id/username/password/role）
- UserRepository: 新建 JPA DAO（findByUsername）
- JwtUtil: 加 extractRole() + generateToken(userId, role) 重载
- JwtAuthFilter: 提取 role → SimpleGrantedAuthority("ROLE_X")
- SecurityConfig: 加 /api/admin/** → ADMIN only + DELETE → ADMIN only
- AuthController: login 生成含 role=ADMIN 的 JWT token